--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,13 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: sharing_portfolio
+  pool: 5
+  username: root
+  password: kitamoto
+  host: 127.0.0.1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
