--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sharing_Portfolio",
+  "name": "sharing_portfolio",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
