--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: sharing_portfolio
+  pool: 5
+  username: root
+  password: kitamoto
+  host: 127.0.0.1
 
 production:
   <<: *default
