--- a/config/database.yml
+++ b/config/database.yml
@@ -1,40 +1,28 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  
 
 development:
   <<: *default
-  adapter: mysql2
-  encoding: utf8
-  database: sharing_portfolio
-  pool: 5
+  database: Sharing_Portfolio_development
   username: root
-  password: kitamoto
-  host: 127.0.0.1
+  password: password
+  host: db
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+
 test:
   <<: *default
-  adapter: mysql2
-  encoding: utf8
-  database: sharing_portfolio
-  pool: 5
+  database: Sharing_Portfolio_test
   username: root
-  password: kitamoto
-  host: 127.0.0.1
+  password: password
+  host: db
+
 
 production:
   <<: *default
-  adapter: mysql2
+  # adapter: mysql2
   database: Sharing_Portfolio_production
   username: root
   password: Kk-10310723
