--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,22 @@
-version: 2.1
-orbs:
-  ruby: circleci/ruby@0.1.2 
+version: 2
+# orbs:
+#   ruby: circleci/ruby@0.1.2 
 
 # 実行処理の単位
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.6.6-node-browsers
-        environment:
-          - BUNDLER_VERSION: 2.2.14
-          - RAILS_ENV: 'test'
-      - images: circleci/mysql:8.0.23
-        environment:
-          - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
-          - MYSQL_ROOT_HOST: '%'
+    - image: circleci/ruby:2.6.6-node-browsers
+      environment:
+        - BUNDLER_VERSION: 2.2.14
+        - RAILS_ENV: 'test'
+    - images: circleci/mysql:8.0.23
+      environment:
+        - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+        - MYSQL_ROOT_HOST: '%'
 
 
-      working_directory: ~/Sharing_Portfolio
+    working_directory: ~/Sharing_Portfolio
     # executor: ruby/default
 
     steps:
