--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
 
 production:
   <<: *default
-  # adapter: mysql2
   database: Sharing_Portfolio_production
   username: root
   password: Kk-10310723
+  socket: /var/lib/mysql/mysql.sock
