--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,5 +84,8 @@ jobs: # 一連のステップ
 
     - deploy:
         name: Capistrano deploy
-        command:
+        command: |
+          if [ "${CIRCLE_BRANCH}" != "master" ]; then
+            exit 0
+          fi
           bundle exec cap production deploy
