--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,11 @@
 inherit_from: .rubocop_todo.yml
+
+Metrics/AbcSize:
+  Enabled: true
+  Max: 34
+
+Metrics/CyclomaticComplexity:
+  Max: 10
+
+Metrics/MethodLength:
+  Max: 20
